--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { background-image: linear-gradient(0, #DDD5F5 0%, #DDD5F5 100%); }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
